--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,6 +1,6 @@
 <!-- navbar.html -->
 <div class="navbar">
-    <a href="index.html">Início</a>
+    <a href="../">Início</a>
     <a href="capitulo01.html">Capítulo 1</a>
     <a href="capitulo02.html">Capítulo 2</a>
     <a href="capitulo03.html">Capítulo 3</a>
